# GritstoneMailService

./: .gitignore  check_vps.ps1  docker-compose.yml  test_email.ps1
api-gateway/: .dockerignore  .env  Dockerfile  go.mod  go.sum  main.go
api-gateway/frontend/: index.html
mail-core/: .dockerignore  .env  Cargo.toml  Dockerfile
mail-core/migrations/: 20260114120000_create_emails_table.sql  20260114130000_create_accounts_table.sql  20260114130001_create_mailboxes_table.sql
mail-core/src/: main.rs
shared/proto/: mail.proto
